# ozumaru_fast_api

./: .coverage  pyproject.toml
src/fast_zero/: app.py
tests/: test_app.py
