[project]
name = "fast-zero"
version = "0.1.0"
description = "Meu Primeiro Projeto FastAPI"
authors = [
    {name = "0oz4ru",email = "ozumaru@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
run        = "fastapi dev src/fast_zero/app.py"
pre_test   = "task lint"
test       = "pytest --cov=src/fast_zero/ -vv"
post_test  = "coverage html"
lint       = "ruff check . && ruff check . --diff"
format     = "ruff check . --fix && ruff format ."